# ece-4900-tbb-BLOB-analysis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Documentation/Measurements/: Bench ATOM N2600.xlsx  Bench i5-7600.xlsx  Grass Fire.txt  Pipeline Bench ATOM N2600.xlsx  Thread Bench1700x.xlsx
Documentation/Photos/: image_calc_flow.drawio
include/FFmpeg/: CMakeLists.txt
include/utils/: ffmpeg_utils.cpp  ffmpeg_utils.h  img_utils.c  img_utils.h  vision_utils.cpp  vision_utils.h
